--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "==2.2"
 djangorestframework = "==3.9.2"
+pylint = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.7"
