--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django = "==2.2"
 djangorestframework = "==3.9.2"
 pylint = "*"
 autopep8 = "*"
+psycopg2 = "==2.7.7"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
