--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = ">=2.2.4"
 djangorestframework = "==3.9.2"
 psycopg2-binary = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
